fixed grid layout issues with Blog component using CSS

--- a/src/App.css
+++ b/src/App.css
@@ -443,10 +443,24 @@
     width: 100%;
     margin-top: 0;
   }
-}
 
-@media screen and (max-width: 600px) {
   .icon-bar a {
     padding: 5px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .bloglinks{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem 0rem;
+  }
+}
+
+@media screen and (min-width: 450px) and (max-height: 700px) {
+  .bloglinks{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem 1rem;
   }
 }
